Continued work on home page fonts; made home description into a YAML list so a Liquid for loop can retrieve each line and place them in their own p tags; fixed display issue with 'breakout' full-width background on 4k displays; made all Liquid tags use the no-whitespace syntax; added include for Open Sans through Google Fonts

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -52,6 +52,8 @@ $on-laptop:        800px !default;
 
 
 //Import fonts
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 @font-face {
   font-family: "Porter";
   src: url("../assets/fonts/Porter Medium.otf");
@@ -60,4 +62,9 @@ $on-laptop:        800px !default;
 @font-face {
   font-family: "Porter Bold";
   src: url("../assets/fonts/Porter Bold.otf");
+}
+
+@font-face {
+  font-family: "Porter Light";
+  src: url("../assets/fonts/Porter Light.otf");
 }
