--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -177,8 +177,8 @@ pre {
 .wrapper {
   	//max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
 	//max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-	margin-right: auto;
-  	margin-left: auto;
+	//margin-right: auto;
+  	//margin-left: auto;
   	padding-right: $spacing-unit;
   	padding-left: $spacing-unit;
     overflow-x: hidden; /*Used to prevent full-page breakout backgrounds from 
